<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/content_padding_left"
    android:paddingRight="@dimen/content_padding_right">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_space"
        android:hint="@string/input_theme"
        android:id="@+id/edit_theme"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_description_height"
            android:layout_below="@+id/edit_theme"
            android:hint="@string/input_description"
            android:id="@+id/edit_description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_description">

        <Button
            android:layout_width="@dimen/button_confirm_width"
            android:layout_height="wrap_content"
            android:id="@+id/button_confirm"
            android:text="@string/button_confirm"/>

            <Button
                android:layout_width="@dimen/button_confirm_width"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/button_confirm"
                android:id="@+id/button_cancel"
                android:text="@string/button_cancel"/>
        </RelativeLayout>



</RelativeLayout>
