<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/content_padding_left"
    android:paddingRight="@dimen/content_padding_right"
    android:paddingTop="@dimen/content_space"
    android:paddingBottom="@dimen/content_space">
    
    <ImageView
        android:layout_width="@dimen/history_icon_width"
        android:layout_height="@dimen/history_icon_height"
        android:layout_alignParentLeft="true"
        android:id="@+id/image_task"
        android:src="@drawable/abc_ab_share_pack_mtrl_alpha"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image_task"
        android:layout_marginLeft="@dimen/content_space">

        <RelativeLayout
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_theme"
            android:text="@string/input_theme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_description"
            android:layout_below="@+id/text_theme"
            android:layout_marginTop="@dimen/text_to_text"
            android:text="@string/input_description"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_start_time"
                android:text="@string/history_start_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_end_time"
                android:layout_below="@+id/text_start_time"
                android:layout_marginTop="@dimen/text_to_text"
                android:text="@string/history_end_time"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
