<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/content_padding_left"
    android:paddingRight="@dimen/content_padding_right">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_space"
        android:gravity="center"
        android:id="@+id/layout_status">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="@dimen/timer_text_size"
          android:id="@+id/text_timer"
          android:text="@string/main_count_down_timer_text"/>
        <TextView
            android:layout_below="@+id/text_timer"
            android:layout_marginTop="@dimen/content_space"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_now_task_theme"
            android:text="@string/main_theme"
            android:textSize="@dimen/main_theme_size"
            />

        <TextView
            android:layout_below="@+id/text_now_task_theme"
            android:layout_marginTop="@dimen/content_space"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_now_task_stutas"
            android:text="@string/main_status"
            android:textSize="@dimen/main_status_size"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_status"
        android:gravity="center_horizontal"
        android:id="@+id/layout_operation"
        android:layout_marginTop="@dimen/content_space">
        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_start"
            android:text="@string/button_confirm"/>

    </RelativeLayout>



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_space_big"
        android:layout_below="@+id/layout_operation"
        android:id="@+id/scroll_view_task_list"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear_view_task_list"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="just for jump"
        android:id="@+id/button_jump"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
